# kar_osk_po

./: CMakeLists.txt  CMakelists.txt  README.md  vcpkg.json
2024_09_24_funkcje_matematyczne/: CMakelists.txt  main  main.cpp
2024_10_18_cmake_template/: CMakelists.txt
2024_10_25_generator_solver/: CMakeLists.txt  main.cpp
2024_11_14_struct_operators/: CMakeLists.txt  main.cpp
2024_11_28_associative_arrays/: CMakeLists.txt  main.cpp
2024_12_05_zad_23/: CMakeLists.txt
2024_12_05_zadanie_23/: CMakeLists.txt  desc.txt  main.cpp
2025_01_17_demografia/: CMakeLists.txt  desc.txt  main.cpp
2025_02_27_zad_84/: CMakeLists.txt  _desc.txt  main.cpp
2025_03_06_zad_04/: CMakeLists.txt  _desc_0.txt  _desc_1.txt  _desc_2.txt  _desc_3.txt  _desc_4.txt  _desc_5.txt  main.cpp  task0_col_data.txt
2025_03_13_zad_44/: CMakeLists.txt  main.cpp  zadanie_0.txt
2025_03_20_zad_34/: CMakeLists.txt  main.cpp  zadanie_1.txt
2025_05_22_zad_20/: CMakeLists.txt  main.cpp  task.txt  wyniki.txt
backup_build/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sci_po.sln
backup_build/2024_09_24_funkcje_matematyczne/: Makefile  funkcje_matematyczne
backup_build/2024_09_24_funkcje_matematyczne/funkcje_matematyczne.dir/Debug/: funkcje_matematyczne.exe.recipe  funkcje_matematyczne.ilk
backup_build/2024_10_25_generator_solver/: 2024_10_25_generator_solver  Makefile  answers.txt  cmake_install.cmake
backup_build/2024_10_25_generator_solver/2024_10_25_generator_solver.dir/Debug/: 2024_10_25_generator_solver.exe.recipe
backup_build/2024_11_14_struct_operators/: data.txt
backup_build/2024_11_14_struct_operators/2024_11_14_struct_operators.dir/Debug/: 2024_11_14_struct_operators.ilk
backup_build/2024_11_14_struct_operators/Debug/: data.txt
backup_build/2024_11_28_associative_arrays/: 2024_11_28_associative_arrays.vcxproj  cmake_install.cmake
backup_build/2024_12_05_zad_23/: 2024_12_05_zad_23  odp.txt
backup_build/2025_01_17_demografia/: 2025_01_17_demografia.vcxproj.filters
backup_build/2025_02_27_zad_84/: 2025_02_27_zad_84.vcxproj.filters
backup_build/2025_03_06_zad_04/: 2025_03_06_zad_04.vcxproj  2025_03_06_zad_04.vcxproj.filters  task0_row_data.txt
backup_build/2025_03_06_zad_04/Debug/: task1_row_data.txt  task2_data.txt  task3_matrix_data.txt  task4_custom_data.txt  task5_data.txt
backup_build/2025_03_13_zad_44/: 2025_03_13_zad_44.vcxproj  cmake_install.cmake
backup_build/2025_03_20_zad_34/: 2025_03_20_zad_34.vcxproj  2025_03_20_zad_34.vcxproj.filters
backup_build/sci_sfml/: cmake_install.cmake  sci_sfml.vcxproj  sci_sfml.vcxproj.filters
backup_build/win32/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
kar_osk_po/2024_09_24_funkcje_matematyczne/: CMakeLists.txt  main.cpp
sci_sfml/: CMakeLists.txt  main.cpp
(+135 files in other folders)
