cmake_minimum_required(VERSION 3.20)
project(sci_po)

#add_subdirectory(2024_09_24_funkcje_matematyczne)
#add_subdirectory(2024_10_25_generator_solver)
#add_subdirectory(2024_11_14_struct_operators)
#add_subdirectory(2024_11_28_associative_arrays)
#add_subdirectory(2024_12_05_zad_23)
#add_subdirectory(2025_01_17_demografia)
#add_subdirectory(2025_02_27_zad_84)
#add_subdirectory(2025_03_06_zad_04)
#add_subdirectory(2025_03_13_zad_44)
#add_subdirectory(2025_03_20_zad_34)
add_subdirectory(2025_05_22_zad_20)

set(VCPKG_SCRIPT "C:\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake")

if(EXISTS ${VCPKG_SCRIPT})
	include(${VCPKG_SCRIPT})
	add_subdirectory(sci_sfml)
endif()